Opened 17 years ago

Closed 17 years ago

#2265 closed bug (fixed)

KDL harddisk problem

Reported by: mrsunshine Owned by: axeld
Priority: blocker Milestone: R1/alpha1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

When booting straight out i get the kdl stated in the screenshots attached, im unable to get serial logs due to stupid laptop has no old school ports =)

HDSize: 80GB

lspci -nn: 00:00.0 Host bridge [0600]: ATI Technologies Inc RS480 Host Bridge [1002:5950] (rev 10) 00:01.0 PCI bridge [0604]: ATI Technologies Inc RS480 PCI Bridge [1002:5a3f] 00:04.0 PCI bridge [0604]: ATI Technologies Inc RS480 PCI Bridge [1002:5a36] 00:05.0 PCI bridge [0604]: ATI Technologies Inc RS480 PCI Bridge [1002:5a37] 00:06.0 PCI bridge [0604]: ATI Technologies Inc RS480 PCI Bridge [1002:5a38] 00:07.0 PCI bridge [0604]: ATI Technologies Inc RS480 PCI Bridge [1002:5a39] 00:12.0 IDE interface [0101]: ATI Technologies Inc 4379 Serial ATA Controller [1002:4379] (rev 80) 00:13.0 USB Controller [0c03]: ATI Technologies Inc IXP SB400 USB Host Controller [1002:4374] (rev 80) 00:13.1 USB Controller [0c03]: ATI Technologies Inc IXP SB400 USB Host Controller [1002:4375] (rev 80) 00:13.2 USB Controller [0c03]: ATI Technologies Inc IXP SB400 USB2 Host Controller [1002:4373] (rev 80) 00:14.0 SMBus [0c05]: ATI Technologies Inc IXP SB400 SMBus Controller [1002:4372] (rev 83) 00:14.1 IDE interface [0101]: ATI Technologies Inc Standard Dual Channel PCI IDE Controller [1002:4376] (rev 80) 00:14.2 Audio device [0403]: ATI Technologies Inc SB450 HDA Audio [1002:437b] (rev 01) 00:14.3 ISA bridge [0601]: ATI Technologies Inc IXP SB400 PCI-ISA Bridge [1002:4377] (rev 80) 00:14.4 PCI bridge [0604]: ATI Technologies Inc IXP SB400 PCI-PCI Bridge [1002:4371] (rev 80) 00:18.0 Host bridge [0600]: Advanced Micro Devices [AMD] K8 [Athlon64/Opteron] HyperTransport Technology Configuration [1022:1100] 00:18.1 Host bridge [0600]: Advanced Micro Devices [AMD] K8 [Athlon64/Opteron] Address Map [1022:1101] 00:18.2 Host bridge [0600]: Advanced Micro Devices [AMD] K8 [Athlon64/Opteron] DRAM Controller [1022:1102] 00:18.3 Host bridge [0600]: Advanced Micro Devices [AMD] K8 [Athlon64/Opteron] Miscellaneous Control [1022:1103] 01:05.0 VGA compatible controller [0300]: ATI Technologies Inc RS485 [Radeon Xpress 1100 IGP] [1002:5975] 02:00.0 Ethernet controller [0200]: Atheros Communications, Inc. AR5006EG 802.11 b/g Wireless PCI Express Adapter [168c:001c] (rev 01) 08:01.0 CardBus bridge [0607]: ENE Technology Inc CB-712/4 Cardbus Controller [1524:1412] (rev 10) 08:01.1 FLASH memory [0501]: ENE Technology Inc ENE PCI Memory Stick Card Reader Controller [1524:0530] (rev 01) 08:01.2 SD Host controller [0805]: ENE Technology Inc ENE PCI Secure Digital Card Reader Controller [1524:0550] (rev 01) 08:01.3 FLASH memory [0501]: ENE Technology Inc FLASH memory: ENE Technology Inc: [1524:0520] (rev 01) 08:01.4 FLASH memory [0501]: ENE Technology Inc SD/MMC Card Reader Controller [1524:0551] (rev 01) 08:02.0 Ethernet controller [0200]: Realtek Semiconductor Co., Ltd. RTL-8139/8139C/8139C+ [10ec:8139] (rev 10)

Attachments (2)

pict2174.jpg (299.8 KB ) - added by mrsunshine 17 years ago.
Part1 KDL
pict2176.jpg (293.8 KB ) - added by mrsunshine 17 years ago.
Part2 KDL

Download all attachments as: .zip

Change History (7)

by mrsunshine, 17 years ago

Attachment: pict2174.jpg added

Part1 KDL

by mrsunshine, 17 years ago

Attachment: pict2176.jpg added

Part2 KDL

comment:1 by bonefish, 17 years ago

Component: Drivers/DiskSystem/Kernel
Milestone: R1R1/alpha1
Owner: changed from marcusoverhagen to axeld
Priority: normalblocker

The problem can be reproduced under VMware, if the virtual machine has a second hard disk. It crashes in devfs_ioctl() (B_GET_MEDIA_STATUS). The log lists an earlier devfs_get_vnode(), but no devfs_open_vnode() for the concerned node. Interestingly the given cookie had been returned by an devfs_open() for another node earlier.

comment:2 by euan, 17 years ago

Same issue here.

00:12.0 SATA controller [0106]: ATI Technologies Inc SB600 Non-Raid-5 SATA [1002:4380] 00:14.1 IDE interface [0101]: ATI Technologies Inc SB600 IDE [1002:438c]

hrev25668

comment:3 by axeld, 17 years ago

Status: newassigned

in reply to:  1 comment:4 by axeld, 17 years ago

Replying to bonefish:

Interestingly the given cookie had been returned by an devfs_open() for another node earlier.

Yes, because someone didn't update the debug output when he changed the FS API recently ; you don't see the values you'd expect there yet :-)

comment:5 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev25670.

Note: See TracTickets for help on using tickets.