* BaseDevice didn't initialize the fInitialized member, and thus causing bug   #2265. * Device::InitDevice()/UninitDevice() are called from outside of the device   manager, so they better lock it. * Turned off debug output in devfs and the device manager. * Fixed debug output in devfs to print the actual vnode/cookie values, instead   of the structures the VFS passes in now.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25670 a95241bf-73f2-0310-859d-f6bbb57e9c96